# mcp-cowork-bridge

./: .project.yml  CLAUDE.md  Cargo.toml  README.md
crates/mcp-cowork-bridge/: Cargo.toml
crates/mcp-cowork-bridge/src/: lib.rs
docs/superpowers/specs/: 2026-05-21-mcp-cowork-bridge-design.md
