[workspace]
members = ["crates/mcp-cowork-bridge"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Richard Lyon"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardjlyon/mcp-cowork-bridge"
homepage = "https://github.com/richardjlyon/mcp-cowork-bridge"
description = "Expose a local rmcp MCP server to Claude.ai's web Cowork sandbox via Tailscale Funnel, with OAuth 2.1 + launchd integration."
keywords = ["mcp", "oauth", "tailscale", "macos", "claude"]
categories = ["api-bindings", "web-programming::http-server"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
rmcp = { version = "1.7", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
url = "2"
async-trait = "0.1"
# dev-deps
axum-test = "17"
tempfile = "3"
insta = "1"
