[package]
name = "mcp-cowork-bridge"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
url.workspace = true
async-trait.workspace = true

[dev-dependencies]
axum-test.workspace = true
tempfile.workspace = true
insta.workspace = true
